--- a/index.html
+++ b/index.html
@@ -166,7 +166,7 @@
                   Уровень самоотдачи
                 </p>
                 <p class="description-nerds__static-table-value">
-                  146<span class="description-nerds__static-table-value-procent">%</span>
+                  146<sup class="description-nerds__static-table-value-procent">%</sup>
                 </p>
               </li>
               <li>
@@ -174,7 +174,7 @@
                   Соблюдение сроков
                 </p>
                 <p class="description-nerds__static-table-value">
-                  100<span class="description-nerds__static-table-value-procent">%</span>
+                  100<sup class="description-nerds__static-table-value-procent">%</sup>
                 </p>
               </li>
               <li>
@@ -182,7 +182,7 @@
                   Минимальная предоплата
                 </p>
                 <p class="description-nerds__static-table-value">
-                  50<span class="description-nerds__static-table-value-procent">%</span>
+                  50<sup class="description-nerds__static-table-value-procent">%</sup>
                 </p>
               </li>
             </ul>
@@ -196,16 +196,24 @@
 
           <ul class="partners__list">
             <li class="partners__list-item">
-              <a class="partners__link" href="#">Html Academy</a>
+              <a class="partners__link partners__link--htmlacademy" href="#">
+                <span class="visually-hidden">Html Academy</span>
+              </a>
             </li>
             <li class="partners__list-item">
-              <a class="partners__link" href="#">Barbershop Borodinski</a>
+              <a class="partners__link partners__link--barbershop" href="#">
+                <span class="visually-hidden">Barbershop Borodinski</span>
+              </a>
             </li>
             <li class="partners__list-item">
-              <a class="partners__link" href="#">Pink</a>
+              <a class="partners__link partners__link--pink" href="#">
+                <span class="visually-hidden">Pink</span>
+              </a>
             </li>
             <li class="partners__list-item">
-              <a class="partners__link" href="#">Mishka</a>
+              <a class="partners__link partners__link--mishka" href="#">
+                <span class="visually-hidden">Mishka</span>
+              </a>
             </li>
           </ul>
         </div>
@@ -220,8 +228,8 @@
         <div class="map__wrapper wrapper">
           <div class="map__contacts">
             <h3 class="map__title">Nёrds Design Studio</h3>
-            <address class="map__address">191186, Санкт-Петербург,<br> ул. Большая Конюшенная, д. 19/8</address>
-            <a href="tel:+78122757575" class="map__phone">+7 (812) 275-75-75</a>
+            <address class="map__address">191186, Санкт-Петербург,<br> ул. Б. Конюшенная, д. 19/8</address>
+            <a href="tel:+78122757575" class="map__phone">тел. +7 (812) 275-75-75</a>
             <a class="map__btn-open-modal" href="#">Напишите нам</a>
           </div>
         </div>
@@ -296,7 +304,7 @@
       </form>
 
       <button class="modal-callback__btn-close" type="button">
-        <div class="visually-hidden">Закрыть</div>
+        <span class="visually-hidden">Закрыть</span>
       </button>
     </section>
   </body>
