--- a/catalog.html
+++ b/catalog.html
@@ -147,15 +147,21 @@
           </ul>
           <ul class="sort-filter__order-links">
             <li>
-              <a class="sort-filter__order-link sort-filter__order-link--active">
+              <a class="sort-filter__order-linksort-filter__order-link--active">
                 <span class="visually-hidden">По убыванию</span>
                 <!-- SVG -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10">
+                  <path fill="#231F20" d="M5.5 10L0 0h11"/>
+                </svg>
               </a>
             </li>
             <li>
               <a class="sort-filter__order-link" href="#">
                 <span class="visually-hidden">По возрастанию</span>
                 <!-- SVG -->
+                <svg xmlns="http://www.w3.org/2000/svg" width="11" height="10" viewBox="0 0 11 10" aria-label="Иконка вверх">
+                  <path fill="#231F20" d="M5.5 0L0 10h11z"/>
+                </svg>
               </a>
             </li>
           </ul>
