Добавил внутренную тень кнопкам пагинации и фильтра, кнопке задал наследование шрифта, продублировал модальное окно из главной в каталог (ломалась сетка)

--- a/index.html
+++ b/index.html
@@ -281,7 +281,7 @@
 
     <!-- Модальное окно "Напишите нам" -->
     <!-- modal-callback--opened — класс для показа модалки -->
-    <section class="modal-callback ">
+    <section class="modal-callback modal-callback--opened">
       <h2 class="modal-callback__title">Напишите нам</h2>
 
       <form action="https://echo.htmlacademy.ru" class="modal-callback__form">
