--- a/catalog.html
+++ b/catalog.html
@@ -324,23 +324,23 @@
 
     <!-- Модальное окно "Напишите нам" -->
     <!-- modal-callback--opened — класс для показа модалки -->
-    <section class="modal-callback">
+    <section class="modal-callback modal-callback--open ed">
       <h2 class="modal-callback__title">Напишите нам</h2>
 
       <form action="https://echo.htmlacademy.ru" class="modal-callback__form">
-        <label class="modal-callback__label">
+        <label class="modal-callback__label modal-callback__label--name">
           Ваше имя:
-          <input class="modal-callback__input-text" type="text" name="name" placeholder="Имя Фамилия">
+          <input class="modal-callback__input-text" type="text" name="name" placeholder="Имя Фамилия" required>
         </label>
 
-        <label class="modal-callback__label">
+        <label class="modal-callback__label modal-callback__label--email">
           Ваш email:
-          <input class="modal-callback__input-text" type="email" name="email" placeholder="email@example.com">
+          <input class="modal-callback__input-text" type="email" name="email" placeholder="email@example.com" required>
         </label>
 
-        <label class="modal-callback__label">
-          Текст письма:
-          <textarea class="modal-callback__textarea" name="comment" placeholder="В свободной форме"></textarea>
+        <label class="modal-callback__label modal-callback__label--text">
+          Текст письма
+          <textarea class="modal-callback__textarea" name="comment" placeholder="В свободной форме" required></textarea>
         </label>
 
         <button class="modal-callback__btn-submit" type="submit">Отправить</button>
