--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
       <section class="map">
         <h2 class="visually-hidden">Карта</h2>
 
-        <div class="map__iframe" id="map" width="1160" height="416"></div>
+        <div class="map__iframe" id="map"></div>
 
         <div class="map__wrapper wrapper">
           <div class="map__contacts">
@@ -279,8 +279,7 @@
     </footer>
 
     <!-- Модальное окно "Напишите нам" -->
-    <!-- modal-callback--opened — класс для показа модалки -->
-    <section class="modal-callback modal-callback--open ed">
+    <section class="modal-callback modal-callback--opened">
       <h2 class="modal-callback__title">Напишите нам</h2>
 
       <form action="https://echo.htmlacademy.ru" class="modal-callback__form">
@@ -306,7 +305,7 @@
         <span class="visually-hidden">Закрыть</span>
       </button>
     </section>
-    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=b7ea113c-64a5-4a83-9b36-6cc6e400c461" type="text/javascript"></script>
-    <script src="js/scripts.js" type="text/javascript"></script>
+    <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=b7ea113c-64a5-4a83-9b36-6cc6e400c461"></script>
+    <script src="js/scripts.js"></script>
   </body>
 </html>
