Добавил скрипты для модального окна (открытие, закрытие, анимация, неотправка при пустом поле)

--- a/index.html
+++ b/index.html
@@ -279,18 +279,18 @@
     </footer>
 
     <!-- Модальное окно "Напишите нам" -->
-    <section class="modal-callback modal-callback--opened">
+    <section class="modal-callback">
       <h2 class="modal-callback__title">Напишите нам</h2>
 
       <form action="https://echo.htmlacademy.ru" class="modal-callback__form">
         <label class="modal-callback__label modal-callback__label--name">
           Ваше имя:
-          <input class="modal-callback__input-text" type="text" name="name" placeholder="Имя Фамилия" required>
+          <input class="modal-callback__input-text modal-callback__input-text--name" type="text" name="name" placeholder="Имя Фамилия" required>
         </label>
 
         <label class="modal-callback__label modal-callback__label--email">
           Ваш email:
-          <input class="modal-callback__input-text" type="email" name="email" placeholder="email@example.com" required>
+          <input class="modal-callback__input-text modal-callback__input-text--email" type="email" name="email" placeholder="email@example.com" required>
         </label>
 
         <label class="modal-callback__label modal-callback__label--text">
