Переделал код для слайдера с помощью цикла

--- a/index.html
+++ b/index.html
@@ -77,17 +77,17 @@
 
           <ul class="promo-slider__btn-list">
             <li class="promo-slider__btn-list-item">
-              <button class="promo-slider__btn promo-slider__btn--1 promo-slider__btn--active">
+              <button class="promo-slider__btn promo-slider__btn--active">
                 <span class="visually-hidden">Слайд 1</span>
               </button>
             </li>
             <li class="promo-slider__btn-list-item">
-              <button class="promo-slider__btn promo-slider__btn--2">
+              <button class="promo-slider__btn">
                 <span class="visually-hidden">Слайд 2</span>
               </button>
             </li>
             <li class="promo-slider__btn-list-item">
-              <button class="promo-slider__btn promo-slider__btn--3">
+              <button class="promo-slider__btn">
                 <span class="visually-hidden">Слайд 3</span>
               </button>
             </li>
