--- a/catalog.html
+++ b/catalog.html
@@ -3,7 +3,7 @@
   <head>
     <title>Нёрдс — Магазин готовых шаблонов</title>
     <meta charset="utf-8">
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,400;0,500;0,700;1,400;1,500;1,700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body class="page-body">
@@ -63,12 +63,8 @@
                       margin-left: 0%;
                     "></div>
                   </div>
-                  <div class="range__toggle range__toggle--min" tabindex="0" style="
-                    left: 0%;
-                  "></div>
-                  <div class="range__toggle range__toggle--max" tabindex="0" style="
-                    left: 70%;
-                  "></div>
+                  <div class="range__toggle range__toggle--min" tabindex="0"></div>
+                  <div class="range__toggle range__toggle--max" tabindex="0"></div>
                 </div>
               </div>
 
