Задал фоновый цвет для иллюстрации на главной, модальному окну полям задается required после отправки (не было спокойного состояния по стайлгайду)

--- a/index.html
+++ b/index.html
@@ -102,6 +102,7 @@
 
           <ul class="services__list">
             <li class="services__list-item service service--1">
+              <div class="service__background"></div>
               <h3 class="service__title">Веб-сайты</h3>
               <p class="service__description">
                 Мир никогда не будет прежним после того как увидит ваш сайт!
@@ -110,6 +111,7 @@
             </li>
 
             <li class="services__list-item service service--2">
+              <div class="service__background"></div>
               <h3 class="service__title">Приложения</h3>
               <p class="service__description">
                 Покорите топ-10 приложений в AppStore и Google Play
@@ -118,6 +120,7 @@
             </li>
 
             <li class="services__list-item service service--3">
+              <div class="service__background"></div>
               <h3 class="service__title">Презентации</h3>
               <p class="service__description">
                 Вы даже не подозреваете, насколько вы изумительны!
@@ -286,17 +289,17 @@
       <form action="https://echo.htmlacademy.ru" class="modal-callback__form">
         <label class="modal-callback__label modal-callback__label--name">
           Ваше имя:
-          <input class="modal-callback__input-text modal-callback__input-text--name" type="text" name="name" placeholder="Имя Фамилия" required>
+          <input class="modal-callback__input-text modal-callback__input-text--name" type="text" name="name" placeholder="Имя Фамилия">
         </label>
 
         <label class="modal-callback__label modal-callback__label--email">
           Ваш email:
-          <input class="modal-callback__input-text modal-callback__input-text--email" type="email" name="email" placeholder="email@example.com" required>
+          <input class="modal-callback__input-text modal-callback__input-text--email" type="email" name="email" placeholder="email@example.com">
         </label>
 
         <label class="modal-callback__label modal-callback__label--text">
           Текст письма
-          <textarea class="modal-callback__textarea" name="comment" placeholder="В свободной форме" required></textarea>
+          <textarea class="modal-callback__textarea" name="comment" placeholder="В свободной форме" ></textarea>
         </label>
 
         <button class="modal-callback__btn-submit" type="submit">Отправить</button>
