Задал разную прозрачность чекбоксам, радиобаттонам и текст (0.1, 0.1, 0.3 сооответственно стайлгайду)

--- a/catalog.html
+++ b/catalog.html
@@ -89,7 +89,7 @@
                 <span class="main-filter__text-radio">Адаптивная</span>
               </label>
               <label class="main-filter__label">
-                <input class="visually-hidden main-filter__input-radio" type="radio" name="grid" value="fixed">
+                <input class="visually-hidden main-filter__input-radio" type="radio" name="grid" value="fixed" disabled>
                 <span class="main-filter__text-radio">Фиксированная</span>
               </label>
               <label class="main-filter__label">
@@ -106,7 +106,7 @@
                 <span class="main-filter__text-checkbox">Слайдер</span>
               </label>
               <label class="main-filter__label">
-                <input class="visually-hidden main-filter__input-checkbox" type="checkbox" name="block-advantages">
+                <input class="visually-hidden main-filter__input-checkbox" type="checkbox" name="block-advantages" disabled>
                 <span class="main-filter__text-checkbox">Блок преимуществ</span>
               </label>
               <label class="main-filter__label">
