--- a/index.html
+++ b/index.html
@@ -200,7 +200,7 @@
 
           <ul class="partners__list">
             <li class="partners__list-item">
-              <a class="partners__link partners__link--htmlacademy" href="#">
+              <a class="partners__link partners__link--htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">
                 <span class="visually-hidden">Html Academy</span>
               </a>
             </li>
