--- a/index.html
+++ b/index.html
@@ -200,23 +200,23 @@
 
           <ul class="partners__list">
             <li class="partners__list-item">
-              <a class="partners__link partners__link--htmlacademy" href="https://htmlacademy.ru/intensive/htmlcss">
-                <span class="visually-hidden">Html Academy</span>
+              <a class="partners__link" href="https://htmlacademy.ru/intensive/htmlcss">
+                <img class="partners__img partners__img--htmlacademy" src="img/htmlacademy-logo.png" width="199" height="68" alt="Html Academy">
               </a>
             </li>
             <li class="partners__list-item">
-              <a class="partners__link partners__link--barbershop" href="#">
-                <span class="visually-hidden">Barbershop Borodinski</span>
+              <a class="partners__link" href="#">
+                <img class="partners__img partners__img--barbershop" src="img/barbershop-logo.png" width="209" height="90" alt="Barbershop Borodinski">
               </a>
             </li>
             <li class="partners__list-item">
-              <a class="partners__link partners__link--pink" href="#">
-                <span class="visually-hidden">Pink</span>
+              <a class="partners__link" href="#">
+                <img class="partners__img partners__img--pink" src="img/pink-logo.png" width="185" height="52" alt="Pink">
               </a>
             </li>
             <li class="partners__list-item">
-              <a class="partners__link partners__link--mishka" href="#">
-                <span class="visually-hidden">Mishka</span>
+              <a class="partners__link" href="#">
+                <img class="partners__img partners__img--mishka" src="img/mishka-logo.png" width="173" height="84" alt="Mishka">
               </a>
             </li>
           </ul>
