Минифицировал и подключил JS, убрал атрибуты required в страницe catalog

--- a/catalog.html
+++ b/catalog.html
@@ -322,17 +322,17 @@
       <form action="https://echo.htmlacademy.ru" class="modal-callback__form">
         <label class="modal-callback__label modal-callback__label--name">
           Ваше имя:
-          <input class="modal-callback__input-text modal-callback__input-text--name" type="text" name="name" placeholder="Имя Фамилия" required>
+          <input class="modal-callback__input-text modal-callback__input-text--name" type="text" name="name" placeholder="Имя Фамилия">
         </label>
 
         <label class="modal-callback__label modal-callback__label--email">
           Ваш email:
-          <input class="modal-callback__input-text modal-callback__input-text--email" type="email" name="email" placeholder="email@example.com" required>
+          <input class="modal-callback__input-text modal-callback__input-text--email" type="email" name="email" placeholder="email@example.com">
         </label>
 
         <label class="modal-callback__label modal-callback__label--text">
           Текст письма
-          <textarea class="modal-callback__textarea" name="comment" placeholder="В свободной форме" required></textarea>
+          <textarea class="modal-callback__textarea" name="comment" placeholder="В свободной форме"></textarea>
         </label>
 
         <button class="modal-callback__btn-submit" type="submit">Отправить</button>
@@ -343,6 +343,6 @@
       </button>
     </section>
     <script src="https://api-maps.yandex.ru/2.1/?lang=ru_RU&amp;apikey=b7ea113c-64a5-4a83-9b36-6cc6e400c461"></script>
-    <script src="js/scripts.js"></script>
+    <script src="js/scripts.min.js"></script>
   </body>
 </html>
