Убрал забытые disabled

--- a/catalog.html
+++ b/catalog.html
@@ -86,7 +86,7 @@
                 <span class="main-filter__text-radio">Адаптивная</span>
               </label>
               <label class="main-filter__label">
-                <input class="visually-hidden main-filter__input-radio" type="radio" name="grid" value="fixed" disabled>
+                <input class="visually-hidden main-filter__input-radio" type="radio" name="grid" value="fixed">
                 <span class="main-filter__text-radio">Фиксированная</span>
               </label>
               <label class="main-filter__label">
@@ -103,7 +103,7 @@
                 <span class="main-filter__text-checkbox">Слайдер</span>
               </label>
               <label class="main-filter__label">
-                <input class="visually-hidden main-filter__input-checkbox" type="checkbox" name="block-advantages" disabled>
+                <input class="visually-hidden main-filter__input-checkbox" type="checkbox" name="block-advantages">
                 <span class="main-filter__text-checkbox">Блок преимуществ</span>
               </label>
               <label class="main-filter__label">
